<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/phone"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_choose_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/choose_contact" />

    `<EditText
        android:id="@+id/editText_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonPanel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_your_message"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:textColor="@android:color/black" />


    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_call"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call" />

        <Button
            android:id="@+id/button_send_message"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/send_sms" />
    </LinearLayout>


</RelativeLayout>
